--- a/pixi.toml
+++ b/pixi.toml
@@ -12,6 +12,9 @@ test = { cmd = "pytest", env = { PYTHONPATH = "${workspace}" } }
 python = "3.11.*"
 pip = ">=25.3,<26"
 ros-humble-desktop = ">=0.10.0,<0.11"
+scipy = ">=1.11,<2"
+numpy = ">=1.26,<2"
+loguru = ">=0.7,<1"
 
 [feature.dev.dependencies]
 pre-commit = "*"
