--- a/pixi.toml
+++ b/pixi.toml
@@ -15,6 +15,7 @@ ros-humble-desktop = ">=0.10.0,<0.11"
 scipy = ">=1.11,<2"
 numpy = ">=1.26,<2"
 loguru = ">=0.7,<1"
+cuda-toolkit = "12.8.*"
 
 [feature.dev.dependencies]
 pre-commit = "*"
@@ -27,6 +28,7 @@ tomli-w = ">=1.2.0,<2"
 [pypi-dependencies]
 tygrit = { path = ".", editable = true }
 py-trees = ">=2.2,<3"
+torch = { version = "==2.7.0", index = "https://download.pytorch.org/whl/cu128" }
 
 [environments]
 default = ["dev"]
