--- a/pixi.toml
+++ b/pixi.toml
@@ -30,6 +30,7 @@ tygrit = { path = ".", editable = true }
 py-trees = ">=2.2,<3"
 torch = { version = "==2.7.0", index = "https://download.pytorch.org/whl/cu128" }
 mani-skill = ">=3.0.0b0, <4"
+torchvision = "==0.22.0"
 
 [environments]
 default = ["dev"]
